Finish setting up API endpoints
